--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             Music and Audio Computing Lab, Research Center for IT innovation, Academia Sinica, Taipei, Taiwan<br>
                             Machine Learning Research Team, KKBOX Inc, Taiwan</p>
                         <p>
-                            [<a href="http://mac.citi.sinica.edu.tw/">MACLab</a>]
+                            [<a href="https://musicai.citi.sinica.edu.tw/">MACLab</a>]
                         </p>
                     </div>                    
                 </section>
@@ -114,7 +114,7 @@
                         <center><img src="img/genre_model1.png" class="model_img" style="width: 80%; "></center>
                         <p>Model [1] contains four convolution layers and two fully convolution layers for the final prediction. </p>
                         <center><img src="img/genre_model.png" class="model_img" style="width: 50%; "></center>
-                        <p style="margin-top: 50px"> Model [2] is based on the fusion convolution network proposed by <a href="http://jordipons.me/media/CBMI16.pdf">Pons et al</a>. Time subnet and frequency subnet is responsible for extracting time and frequency related features. The extracted features are then merged through fully-connected layer for the final prediction.</p>
+                        <p style="margin-top: 50px"> Model [2] is based on the fusion convolution network proposed by <a href="http://jordipons.me/media/CBMI16.pdf">Pons et al</a>. Time subnet and frequency subnet are responsible for extracting time and frequency related features. The extracted features are then merged through fully-connected layer for the final prediction.</p>
                     </div>                    
                 </section>
                 
